--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
 
             <p>A conquista de maior expressão do jogador foi em 2016, nas <strong>Olimpíadas</strong> do Rio. O tão sonhado ouro no futebol masculino foi confirmado na final contra a Alemanha. Neymar ficou marcado por anotar o gol mais rápido da história dos Jogos Olímpicos (14 segundos). Além de ter convertido na <strong>final</strong> a última penalidade que rendeu o ouro para o Brasil. </p>
             <p id="creditos">Gostou? creditos a esse site <a href="https://www.esportelandia.com.br/futebol/neymar/" target="_blank">https://www.esportelandia.com.br/futebol/neymar/</a></p>
+            <a href="index.html">Voltar</a>
         </article>
     </main>
     <footer>
